# stremio-dailymotion-addon

./: CLAUDE.md  README.md  configure.html  package-lock.json  package.json  stremio-dailymotion-addon.js
table_read/: .env.example  .gitignore  pyproject.toml  requirements.txt  voice_catalog.json
table_read/output/: beats.json  casting.json  characters.json  direction.json  inputs.lock.json  lexicon.json  voice_profiles.json
table_read/samples/: sample_scene.txt
table_read/src/table_read/: __init__.py  analyzer.py  budget.py  caster.py  cli.py  hashing.py  models.py  orchestrator.py  playback.py  renderer.py  screenplay.py
table_read/tests/: test_caster.py  test_hashing.py  test_render_hash.py  test_screenplay.py
